# chessbot2

./: .gitignore  .gitmodules  pyproject.toml
configs/: train.yaml
scripts/: check_data.py  make_dataset.py  play.py  to_parquet.py  train.py
src/: datamodules.py  engine.py  lightning_utils.py  modules.py  networks.py
